# crypto-agent

./: .claude-code  .dockerignore  .env.example  .gitignore  README.md  claude.md  decisions.md  environment.yml  main.py  pyproject.toml  requirements.txt  setup_env.sh  user_profiles.json
config/: default.yaml
reports/: multi_turn_demo.md  report_aggressive_young.md  report_conservative_beginner.md  report_recovery_investor.md
src/agents/: challenger_agent.py  handoffs.py  supervisor_agent.py  technical_analysis_agent.py  technical_analysis_workflow.py  web_sentiment_agent.py
src/schemas/: ta_output_schema_eg.json
src/tools/: base_tool.py  fear_greed_tool.py  playwright_tool.py  serper_tool.py  taapi_tool.py
src/utils/: logging_config.py  reporting_utils.py
tests/: test_taapi_tool.py
